[project]
name = "zpl_converter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jkasser", email = "jkasser@gmail.com"},
]
dependencies = [
    "setuptools>=75.2.0",
    "pathlib>=1.0.1",
    "requests>=2.32.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
